--- a/index.html
+++ b/index.html
@@ -1,12 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eid-zakad</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="bannar">
+        <div class="font-page">
+            <h1 id="top-1">Let’s Finish your <br>
+                internal Evil</h1>
+            <p id="para-head">Lorem ipsum dolor sit amet, usu cu esse possit <br>
+                referrentur, at eam falli deterruisset. No duo populo
+                <br> animal noluisse, enim.
+            </p>
+            <a class="Donation" target="_blank" href="https://www.bkash.com/">Donate Now</a>
+
+        </div>
+    </section>
+
+    <section class="is">
+        <div class="ritten">
+            <h1 id="donation">Their lives depend on <br>
+                your donation</h1>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit <br>
+                referrentur, at eam falli deterruisset. No duo populo <br>
+                animal noluisse, enim</p>
+            <p class="para">Lorem ipsum dolor sit amet, usu cu esse possit <br>
+                referrentur, at eam falli deterruisset.</p>
+
+            <a id="button" href="https://www.facebook.com/">Explore More</a>
+        </div>
+        <div>
+            <video class="market" src="media/video/Folk Mashup - Lyrics Video __ Dj Rahat __ Parvez.mp4 "
+                controls></video>
+
+        </div>
+    </section>
+
+
+
+
+    <section class="text-img">
+        <div class="id">
+            <img src="img/Screenshot 2022-07-15 145632.png" alt="">
+            <div class="habe">
+                <p>Lorem ipsum, dolor sit amet consectetur
+                    <br> adipisicing elit. Iure provident
+                    <br> eius recusandae perferendis nulla
+                    <br> quod fugit rerum ad velit numquam.
+                </p>
+            </div>
+        </div>
+
+
+
+        <div class="id">
+            <img src="img/Screenshot 2022-07-15 145632.png" alt="">
+            <div class="habe">
+                <p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Iure provident <br> eius recusandae
+                    perferendis nulla <br> quod fugit rerum ad velit numquam.</p>
+            </div>
+        </div>
+        <div class="id">
+            <img src="img/Screenshot 2022-07-15 145632.png" alt="">
+            <div class="habe">
+                <p>Lorem ipsum, dolor sit amet consectetur <br> adipisicing elit. Iure provident <br> eius recusandae
+                    perferendis nulla <br> quod fugit rerum ad velit numquam.</p>
+            </div>
+        </div>
+
+    </section>
+
+    <section class="icon">
+
+        <div class="figma">
+            <div>
+                <img src="img/Frame-1.png" alt="">
+            </div>
+            <div>
+                <h2>Direct Help</h2>
+                <p>Lorem ipsum dolor sit amet, usu <br>cu esse possit referrentur, at <br>
+                    eam falli deterruisset. No duo <br>populo animal noluisse, enim</p>
+            </div>
+
+
+        </div>
+
+        <div class="figma">
+            <div>
+                <img src="img/Frame-1.png" alt="">
+            </div>
+            <div>
+                <h2>Direct Help</h2>
+                <p>Lorem ipsum dolor sit amet, usu <br>cu esse possit referrentur, at <br>
+                    eam falli deterruisset. No duo <br>populo animal noluisse, enim</p>
+            </div>
+
+
+        </div>
+
+    </section>
+
+    <section class="icon">
+
+        <div class="figma">
+            <div>
+                <img src="img/Frame-1.png" alt="">
+            </div>
+            <div>
+                <h2>Direct Help</h2>
+                <p>Lorem ipsum dolor sit amet, usu <br>cu esse possit referrentur, at <br>
+                    eam falli deterruisset. No duo <br>populo animal noluisse, enim</p>
+            </div>
+
+
+        </div>
+
+        <div class="figma">
+            <div>
+                <img src="img/Frame-1.png" alt="">
+            </div>
+            <div>
+                <h2>Direct Help</h2>
+                <p>Lorem ipsum dolor sit amet, usu <br>cu esse possit referrentur, at <br>
+                    eam falli deterruisset. No duo <br>populo animal noluisse, enim</p>
+            </div>
+
+
+        </div>
+
+    </section>
+
+
+
+
+
+
+
 </body>
+
 </html>
